[mexOS][kernel][vmm/ata] added vmm and ata to the microkernel, fixed const correctness and qumo issues.
Signed-off-by: mendax3301 <adrian.goessl@outlook.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ set(KERNEL_SOURCES
     kernel/sched/switch.s
     kernel/ipc/ipc.c
     kernel/kernel.c
+    kernel/mm/vmm.c
+    kernel/core/ata.c
 )
 
 add_executable(mexOS ${KERNEL_SOURCES})
