[mexOS][kernel][CMake][tests]added test task, update cmake, fixed scheduler and ps command (extended shell).
Signed-off-by: mendax0110 <adrian.goessl@outlook.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,8 @@ set(KERNEL_SOURCES
     kernel/kernel.c
     kernel/mm/vmm.c
     kernel/core/ata.c
+    kernel/core/serial.c
+    tests/test_task.c
 )
 
 add_executable(mexOS ${KERNEL_SOURCES})
