[mexOS][kernel][scheduler]fixed cpu infos, added DS store fiels to gitignore and adapted run script.
Signed-off-by: mendax0110 <adrian.goessl@outlook.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ cmake-build-debug/
 # Ignore CodeQL build directory
 /_codeql_build_dir
 _codeql_detected_source_root
+
+# Ignore the .DS_Store file
+.DS_Store
