[mexOS][ptrUsage] fixed ptr warnings, added new castin macros.
Signed-off-by: mendax0110 <adrian.goessl@outlook.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ set(KERNEL_SOURCES
     tests/core/test_fs.c
     tests/ipc/test_ipc.c
     tests/sched/test_sched.c
+    tests/types/test_types.c
 )
 
 add_executable(mexOS ${KERNEL_SOURCES} ${CMAKE_BINARY_DIR}/initrd.o)
